# seree-tls-notary-blueprint

./: .gitmodules  Cargo.toml  Dockerfile  README.md  foundry.toml
contracts/: foundry.toml
contracts/src/: ISereeServiceManager.sol  SereeServiceManager.sol
contracts/src/p256/: p256_verifier.sol  verifier.sol  verifier_help.sol
src/: constants.rs  jobs.rs  lib.rs  main.rs
src/tlsn/: mod.rs
