[package]
name = "seree-tls-notary-blueprint"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint for instancing a Seree TLS Notary Server"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/seree-tls-notary-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
tracing = "0.1"
async-trait = "0.1"
color-eyre = "0.6"
structopt = "0.3.26"
tokio = { version = "1.41", default-features = false, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["parking_lot", "env-filter"] }
alloy-primitives = "0.7.2"
alloy-json-abi = { version = "0.7.2", features = ["serde_json"] }
alloy-sol-types = { version = "0.7.2", features = ["json"] }
alloy-rpc-client = "0.4.2"
alloy-rpc-types = { version = "0.1" }
alloy-rpc-types-eth = { version = "0.1" }
alloy-provider = { version = "0.1", default-features = false, features = ["reqwest", "ws"] }
alloy-pubsub = { version = "0.1" }
alloy-signer = { version = "0.1" }
alloy-signer-local = { version = "0.1" }
alloy-network = { version = "0.1" }
alloy-node-bindings = "0.4.2"
alloy-contract = { version = "0.1" }
alloy-consensus = { version = "0.1" }
alloy-transport = { version = "0.1" }
alloy-transport-http = { version = "0.1" }

once_cell = "1.20.2"
notary-server = { git = "https://github.com/seree-fam/tlsn.git" }

[features]
default = ["std"]
std = ["gadget-sdk/std"]

[dependencies.gadget-sdk]
# version = "0.2.2"
git = "https://github.com/tangle-network/gadget.git"
default-features = false
features = ["getrandom"]

[build-dependencies]
blueprint-metadata = "0.1.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "seree-tls-notary-blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "seree-tls-notary-blueprint"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-seree-tls-notary-blueprint-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-seree-tls-notary-blueprint-gadget" },
]
